force-app/main/default/objects/Formulary_Products_vod__c/fields/BOT_Formulary_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Formulary_Product_ID__c</fullName>
    <description>It is created by BusiessOne technologies. It is used to store BOT Drug ID.</description>
    <externalId>true</externalId>
    <label>Formulary Product ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>