force-app/main/default/objects/Formulary_Products_vod__c/fields/BOT_Is_BOT_Data__c.field-meta.xml
<CustomField>
    <fullName>BOT_Is_BOT_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created by BusinessOne technologies. This field is used to identify the record created by BOT or Veeva.</description>
    <label>Is BOT Data</label>
    <type>Checkbox</type>
</CustomField>