force-app/main/default/objects/Formulary_Products_vod__c/fields/Market_vod__c.field-meta.xml
<CustomField>
    <fullName>Market_vod__c</fullName>
    <description>Market (such as Cholesterol Reducer) that this product belongs to.  This field is used as a filter in the formulary viewer.</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Multiple Sclerosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>