force-app/main/default/objects/Formulary_Products_vod__c/recordTypes/BOT_Formulary_Product.recordType-meta.xml
<RecordType>
    <fullName>BOT_Formulary_Product</fullName>
    <active>true</active>
    <description>It is created by BusinessOne Technologies Inc and used to store BOT Drug level records.</description>
    <label>BOT_Formulary Product</label>
</RecordType>